--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
-    
+
     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
 
     <application
@@ -15,8 +15,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name="fr.cmoatoto.multishare.ShareActivity"
-            android:label="@string/title_activity_share" >
+            android:name="fr.cmoatoto.multishare.sender.ShareActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
 
@@ -33,8 +33,19 @@
         </activity>
 
         <service
-            android:name="fr.cmoatoto.multishare.HttpService"
+            android:name="fr.cmoatoto.multishare.sender.HttpService"
             android:enabled="true" />
+
+        <activity
+            android:name="fr.cmoatoto.multishare.receiver.ReceiverActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
