--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,10 +32,6 @@
             </intent-filter>
         </activity>
 
-        <service
-            android:name="fr.cmoatoto.multishare.sender.HttpService"
-            android:enabled="true" />
-
         <activity
             android:name="fr.cmoatoto.multishare.receiver.ReceiverActivity"
             android:label="@string/app_name"
@@ -46,6 +42,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name="fr.cmoatoto.multishare.sender.HttpServiceSender"
+            android:enabled="true" />
+
+        <service
+            android:name="fr.cmoatoto.multishare.receiver.HttpServiceReceiver"
+            android:enabled="true" />
     </application>
 
 </manifest>
