--- a/Sender/AndroidManifest.xml
+++ b/Sender/AndroidManifest.xml
@@ -30,6 +30,17 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name="fr.cmoatoto.multishare.sender.KeyboardActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <service
             android:name="fr.cmoatoto.multishare.sender.HttpServiceSender"
             android:enabled="true" />
