Add Keyboard in Receiver Manifest. Now you can select MultiShare as default Keyboard in your device preferences.

--- a/Receiver/AndroidManifest.xml
+++ b/Receiver/AndroidManifest.xml
@@ -27,6 +27,17 @@
         <service
             android:name="fr.cmoatoto.multishare.receiver.HttpServiceReceiver"
             android:enabled="true" />
+        <service
+            android:name="fr.cmoatoto.multishare.receiver.RemotedKeyboard"
+            android:permission="android.permission.BIND_INPUT_METHOD" >
+            <intent-filter>
+                <action android:name="android.view.InputMethod" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.view.im"
+                android:resource="@xml/method" />
+        </service>
     </application>
 
 </manifest>
