Big work on pseudo intent send between devices
I can't comment that much, I'm in conference presenting this project. Sorry.

--- a/Receiver/AndroidManifest.xml
+++ b/Receiver/AndroidManifest.xml
@@ -16,11 +16,14 @@
         <activity
             android:name="fr.cmoatoto.multishare.receiver.ReceiverActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+            android:launchMode="singleInstance" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.HOME" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
