--- a/Sender/AndroidManifest.xml
+++ b/Sender/AndroidManifest.xml
@@ -11,6 +11,7 @@
 
     <application
         android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
             android:name="fr.cmoatoto.multishare.sender.ShareActivity"
@@ -33,6 +34,7 @@
         <activity
             android:name="fr.cmoatoto.multishare.sender.KeyboardActivity"
             android:label="@string/app_name"
+            android:icon="@drawable/ic_launcher_keyboard"
             android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
